--- a/css/main.css
+++ b/css/main.css
@@ -376,8 +376,17 @@ img {
   }
 }
 
+@media screen and (min-width: 480px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/tablet/header-img.jpg);
   }
 }
@@ -390,6 +399,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/desktop/header.jpg);
   }
 }
@@ -476,13 +487,18 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
-  height: 609px;
   background-color: var(--primary-backgroung-color);
   border-radius: 4px;
   transition: opacity 0.6s ease-out 0.2s, transform 0.6s ease-out 0.2s;
   transform: translate(-50%, -50%) rotate(0) scale(1);
   opacity: 1;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-window {
+    width: 450px;
+    height: 609px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -618,6 +634,7 @@ img {
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  align-items: flex-start;
 }
 
 .form-field_checkbox__input {
@@ -762,6 +779,12 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .features-list__title {
+    text-align: left;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .features-list__title {
     text-align: left;
@@ -782,6 +805,7 @@ img {
   align-items: center;
   margin-bottom: 30px;
   background-color: #f5f4fa;
+  height: 90px;
 }
 
 @media screen and (min-width: 480px) {
@@ -1427,7 +1451,6 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
   background-color: #2f303a;
   outline: transparent;
   color: var(--primary-backgroung-color);
@@ -1578,7 +1601,6 @@ img {
     margin: 15px;
     display: flex;
     width: 354px;
-    height: 440px;
   }
 }
 
@@ -1621,14 +1643,21 @@ img {
   top: 0;
   left: 0;
   align-items: center;
-  font-size: 18px;
-  line-height: 28px;
-  padding: 63px 24px;
+  font-size: 16px;
+  padding: 30px 30px;
   position: absolute;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .information-cards__label {
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
 
 .information-cards__icon {
@@ -1756,10 +1785,16 @@ img {
 .menu-contacts__link {
   font-style: normal;
   font-weight: 500;
-  font-size: 34px;
-  line-height: 1.17;
+  font-size: 26px;
   letter-spacing: 0.02em;
   color: #2196f3;
+}
+
+@media screen and (min-width: 480px) {
+  .menu-contacts__link {
+    font-size: 34px;
+    line-height: 1.17;
+  }
 }
 
 .menu-contacts__link-mail {
