--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -57,6 +57,7 @@
   text-align: center;
 
   @media screen and (min-width: 768px) {
+    text-align: left;
   }
 
   @media screen and (min-width: 1200px) {
@@ -78,6 +79,7 @@
   align-items: center;
   margin-bottom: 30px;
   background-color: #f5f4fa;
+  height: 90px;
 
   @media screen and (min-width: 480px) {
     width: 450px;
