--- a/sass/components/_portfolio-information.scss
+++ b/sass/components/_portfolio-information.scss
@@ -113,7 +113,7 @@
     margin: 15px;
     display: flex;
     width: 354px;
-    height: 440px;
+
     // gap: 30px;
   }
 
@@ -152,14 +152,19 @@
   top: 0;
   left: 0;
   align-items: center;
-  font-size: 18px;
-  line-height: 28px;
-  padding: 63px 24px;
+  font-size: 16px;
+  padding: 30px 30px;
   position: absolute;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 480px) {
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
 
 .information-cards__icon {
