--- a/css/main.css
+++ b/css/main.css
@@ -363,8 +363,8 @@ img {
   margin-left: auto;
   max-width: 1600px;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/mobile/header-img.jpg);
@@ -470,7 +470,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 100;
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
@@ -516,7 +516,7 @@ img {
 
 .modal-window__close-btn {
   padding: 6px;
-  top: 8px;
+  top: 40px;
   right: 8px;
   position: absolute;
   display: flex;
@@ -524,6 +524,12 @@ img {
   cursor: pointer;
   background-color: transparent;
   border-color: rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal-window__close-btn {
+    top: 8px;
+  }
 }
 
 .modal-window__close-btn:focus .modal-window__icon-close {
@@ -1042,6 +1048,8 @@ img {
   background-color: var(--primary-backgroung-color);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 44px;
+  height: 44px;
 }
 
 @media screen and (min-width: 480px) {
