--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -132,6 +132,8 @@
   background-color: var(--primary-backgroung-color);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 44px;
+  height: 44px;
 
   @media screen and (min-width: 480px) {
     width: 44px;
