--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 /*___________________BASE_____________________________*/
 body {
   background-color: #ffffff;
-  font-family: "Roboto", sans-serif;
+  font-family: PT Sans;
 }
 
 .no-scroll {
